--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Zodiac</title>
     <link rel="stylesheet" href="css/main.css">
   </head>
-	<--!TEST -->
+	<--!TEST2 -->
   <body>
       <div class="container">
         <h1>Learn About Yourself</h1>
